tests/rosetta/out/Rust/abbreviations-automatic.error
rustc: exit status 1
warning: unnecessary parentheses around assigned value
  --> /tmp/abbreviations_automatic.rs:52:20
   |
52 |         let size = (words.len() as i32);
   |                    ^                  ^
   |
   = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
   |
52 -         let size = (words.len() as i32);
52 +         let size = words.len() as i32;
   |

warning: denote infinite loops with `loop { ... }`
  --> /tmp/abbreviations_automatic.rs:54:9
   |
54 |         while true {
   |         ^^^^^^^^^^ help: use `loop`
   |
   = note: `#[warn(while_true)]` on by default

warning: variable does not need to be mutable
  --> /tmp/abbreviations_automatic.rs:38:68
   |
38 |         let mut m: std::collections::HashMap<String, bool> = { let mut m = std::collections::HashMap::new(); m };
   |                                                                    ----^
   |                                                                    |
   |                                                                    help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

error[E0507]: cannot move out of index of `Vec<String>`
  --> /tmp/abbreviations_automatic.rs:42:21
   |
42 |             let x = xs[(i) as usize];
   |                     ^^^^^^^^^^^^^^^^ move occurs because value has type `String`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
42 |             let x = &xs[(i) as usize];
   |                     +

error[E0382]: use of moved value: `x`
  --> /tmp/abbreviations_automatic.rs:45:61
   |
42 |             let x = xs[(i) as usize];
   |                 - move occurs because `x` has type `String`, which does not implement the `Copy` trait
43 |             if !(m.contains_key(&x)) {
44 |                 m.insert(x, true);
   |                          - value moved here
45 |                 out = { let mut tmp = out.clone(); tmp.push(x); tmp };
   |                                                             ^ value used here after move

error[E0507]: cannot move out of index of `Vec<String>`
  --> /tmp/abbreviations_automatic.rs:58:75
   |
58 |                 abbrs = { let mut tmp = abbrs.clone(); tmp.push(takeRunes(words[(i) as usize], l)); tmp };
   |                                                                           ^^^^^^^^^^^^^^^^^^^ move occurs because value has type `String`, which does not implement the `Copy` trait

error[E0507]: cannot move out of index of `Vec<String>`
  --> /tmp/abbreviations_automatic.rs:79:32
   |
79 |             let words = fields(lines[(i) as usize]);
   |                                ^^^^^^^^^^^^^^^^^^^ move occurs because value has type `String`, which does not implement the `Copy` trait

error: aborting due to 4 previous errors; 3 warnings emitted

Some errors have detailed explanations: E0382, E0507.
For more information about an error, try `rustc --explain E0382`.
